--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -48,7 +48,7 @@
 		<div class="wrapper">
 			<div class="four-four-container">
             	<h1 class="four-four-title">OOPS!</h1>
-                <h4 class="four-four-heading">We can’t seem to find the page you’re looking for.</h4>
+                <div class="four-four-heading">We can’t seem to find the page you’re looking for.</div>
                 <p class="error-code">Error code: 404</p>
                 <p class="helpful-links-heading">Here are some helpful links instead:</p>
                 <ul class="helpful-links">
