--- a/categories.html
+++ b/categories.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -45,7 +45,7 @@
 				<a href="#" class="close-search"><span class="updato-cross"></span></a>
 			</div>
 		</div>
-		<div class="banner-home">
+		<div class="banner-home banner-category">
 			<div class="wrapper">
 				<div class="featured-post">
 					<div class="f-post-img">
