--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -72,12 +72,12 @@
 			<div class="sidebar">
 				<h2 class="team-title">Lead Team</h2>
 				<p class="team-members"><span>Peter Babiy</span><br />
-				Creative Director<br /><br />
-				Twitter: @PeterBabiy<br />
+				Creative Director<br />
+				<span class="twitter">Twitter: @PeterBabiy</span><br />
 				Email: team@updato.com attn: PB<br /><br />
-				<span>Andrei Maguleanu</span><br />
-				Editor-in-Chief<br /><br />
-				Twitter: @kNox<br />
+				<span class="andrei">Andrei Maguleanu</span><br />
+				Editor-in-Chief<br />
+				<span class="twitter">Twitter: @kNox</span><br />
 				Email: team@updato.com attn: AM</p>
 			</div>
 		</div>
