--- a/firmware-download.html
+++ b/firmware-download.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -49,15 +49,15 @@
 			<div class="wrapper">
 				<div class="firmware-meta clear">
 					<h3 class="firmware-model">Galaxy S6 Edge  /  SM-G920T</h3>
-					<p class="firmware-model-info"><span class="f-version-number">6.0.1</span> Marshmallow <span class="seperator">/</span> <img src="images/time-icon.png" class="time-icon" srcset="images/time-icon.png 1x, images/time-icon.png 2x" alt="" /> March 25, 17</p>
+					<p class="firmware-model-info"><span class="f-version-number green-number">6.0.1</span> Marshmallow <span class="seperator">/</span> <img src="images/time-icon.png" class="time-icon" srcset="images/time-icon.png 1x, images/time-icon.png 2x" alt="" /> March 25, 17</p>
 				</div>
 				<ul class="links-list-left">
-					<li><a href="#"><span class="updato-help"></span> How to install</a></li>
-					<li><a href="#">Unlock your phone</a></li>
-					<li><a href="#">Download our app</a></li>
+					<li><a href="#"><span class="updato-help"></span> How to Install</a></li>
+					<li><a href="#">Unlock Your Phone</a></li>
+					<li><a href="#">Download Our App</a></li>
 				</ul>
 				<ul class="links-list-right">
-					<li><a href="#">Ask a question</a></li>
+					<li class="ask-question"><a href="#">Ask a question</a></li>
 					<li><a href="#" class="download-btn">Download</a></li>
 				</ul>
 			</div>
@@ -88,7 +88,7 @@
 					</li>
 				</ul>
 				<h2 class="download-info-title caution-title">Caution</h2>
-				<ul class="download-details">
+				<ul class="download-details cautions">
 					<li class="bg-white">Use Updato ONLY if you know what you’re doing. If you’re simply looking to upgrade your device, we recommend using <a href="#">Samsung Kies</a> and/or via OTA. Updato is not responsible for any damage caused by the information or the files on this site.</li>
 				</ul>
 			</div>
