--- a/firmware-results.html
+++ b/firmware-results.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -63,7 +63,7 @@
 						</ul>
 					</form>
 					<div class="custom-toggle">
-						<label>Smart Search <input type="checkbox" /><span class="custom-toggle-switch"></span></label>
+						<label class="smart-search">Smart Search <input type="checkbox" /><span class="custom-toggle-switch"></span></label>
 					</div>
 				</div>
 				<div class="smart-search-options">
@@ -90,7 +90,9 @@
 						<div class="custom-select-container">
 							<select class="custom-select">
 								<option>15</option>
-								<option>16</option>
+								<option>25</option>
+                                <option>50</option>
+                                <option>100</option>
 							</select>
 						</div>
 					</div>
@@ -191,9 +193,49 @@
 							<td data-title="Region / Carrier:">Algeria</td>
 							<td data-title="PDA:">G355HXXU0APL1</td>
 						</tr>
+                        <tr>
+							<td data-title="Name:">Galaxy Core 2</td>
+							<td data-title="Model:">SM-G355H</td>
+							<td data-title="Version:">4.4.2</td>
+							<td data-title="Date:">March 25, 17</td>
+							<td data-title="Region / Carrier:">Algeria</td>
+							<td data-title="PDA:">G355HXXU0APL1</td>
+						</tr>
+                        <tr>
+							<td data-title="Name:">Galaxy Core 2</td>
+							<td data-title="Model:">SM-G355H</td>
+							<td data-title="Version:">4.4.2</td>
+							<td data-title="Date:">March 25, 17</td>
+							<td data-title="Region / Carrier:">Algeria</td>
+							<td data-title="PDA:">G355HXXU0APL1</td>
+						</tr>
+                        <tr>
+							<td data-title="Name:">Galaxy Core 2</td>
+							<td data-title="Model:">SM-G355H</td>
+							<td data-title="Version:">4.4.2</td>
+							<td data-title="Date:">March 25, 17</td>
+							<td data-title="Region / Carrier:">Algeria</td>
+							<td data-title="PDA:">G355HXXU0APL1</td>
+						</tr>
+                        <tr>
+							<td data-title="Name:">Galaxy Core 2</td>
+							<td data-title="Model:">SM-G355H</td>
+							<td data-title="Version:">4.4.2</td>
+							<td data-title="Date:">March 25, 17</td>
+							<td data-title="Region / Carrier:">Algeria</td>
+							<td data-title="PDA:">G355HXXU0APL1</td>
+						</tr>
+                        <tr>
+							<td data-title="Name:">Galaxy Core 2</td>
+							<td data-title="Model:">SM-G355H</td>
+							<td data-title="Version:">4.4.2</td>
+							<td data-title="Date:">March 25, 17</td>
+							<td data-title="Region / Carrier:">Algeria</td>
+							<td data-title="PDA:">G355HXXU0APL1</td>
+						</tr>
 					</tbody>
 				</table>
-				<p class="page-count">1 - 10 of 36,789</p>
+				<p class="page-count">1 - 15 of 36,789</p>
 				<p class="load-more-btn">
 					<a href="#">Load More</a>
 				</p>
