--- a/firmware-search.html
+++ b/firmware-search.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -48,7 +48,7 @@
 		<div class="banner-home banner-unlock">
 			<div class="wrapper">
 				<form class="firmware-search-form">
-					<input id="search-firmware" placeholder="" required="" type="search">
+					<input id="search-firmware" placeholder="" required type="search">
 					<label for="search-firmware">Enter device or model number <span class="updato-help"></span></label>
 					<button type="submit"><span class="updato-search"></span></button>
 					<ul class="search-suggestions">
@@ -61,7 +61,7 @@
 						<li><a href="#">Galaxy S6 Edge</a></li>
 					</ul>
 				</form>
-				<p class="firmware-search-info"><span>29,078</span> firmwares / <span>14 Hrs</span> since last sync</p>
+				<p class="firmware-search-info"><span>29,078</span> firmwares <span class="space">/</span> <span>14 Hrs</span> since last sync</p>
 			</div>
 		</div>
 		<div class="wrapper">
@@ -70,23 +70,23 @@
 			<div class="unlock-features clear">
 				<div class="col3">
 					<div class="features-item">
-						<img src="images/feature1.png" srcset="images/feature1.png 1x, images/feature1@2x.png 2x" alt="" />
-						<h3>Permanent factory unlock</h3>
-						<p>Our unlock codes are permanent. When you unlock with us, your phone will work on any network - forever.</p>
+						<img src="images/firmware-search1.png" srcset="images/firmware-search1.png 1x, images/firmware-search1@2x.png 2x" alt="" />
+						<h3>Fastest download speeds</h3>
+						<p>No download speed restrictions, no nonsense - download any firmware in just minutes.</p>
 					</div>
 				</div>
 				<div class="col3">
 					<div class="features-item">
-						<img src="images/feature2.png" srcset="images/feature2.png 1x, images/feature2@2x.png 2x" alt="" />
-						<h3>Fastest turnaround</h3>
-						<p>Our systems are streamlined and efficient. As a result, our turnaround times are the fastest in the industry.</p>
+						<img src="images/firmware-search2.png" srcset="images/firmware-search2.png 1x, images/firmware-search2@2x.png 2x" alt="" />
+						<h3>Only official firmwares</h3>
+						<p>All firmwares are Samsung-official. We don’t host unverified firmwares on our servers.</p>
 					</div>
 				</div>
 				<div class="col3">
 					<div class="features-item">
-						<img src="images/feature3.png" srcset="images/feature3.png 1x, images/feature3@2x.png 2x" alt="" />
-						<h3>24 / 7 customer support</h3>
-						<p>Our team is available 24/7 and is highly trained in unlocking all makes and models of phones.</p>
+						<img src="images/firmware-search3.png" srcset="images/firmware-search3.png 1x, images/firmware-search3@2x.png 2x" alt="" />
+						<h3>Always up to date</h3>
+						<p>We live-monitor all firmware updates for every Samsung device, in over 500 regions.</p>
 					</div>
 				</div>
 			</div>
@@ -97,19 +97,6 @@
 				<a href="#" class="join-discussion-btn">Join the Discussion</a>
 				<div class="clear"></div>
 				<ul class="forum-item-list">
-					<li>
-						<div class="forum-cat">
-							<p class="blue-bg"><a href="#">News &amp; Discussion</a></p>
-						</div>
-						<div class="forum-meta-info">
-							<span class="forum-date">Today</span>
-							<h4 class="forum-title"><a href="#">What phone do you have? Do you have another in mind?</a></h4>
-							<div class="forum-comments">
-								<a href="#">7 Comments
-								<span class="forum-last-reply"><span>Andrei</span> Replied</span></a>
-							</div>
-						</div>
-					</li>
 					<li>
 						<div class="forum-cat">
 							<p class="teal-bg"><a href="#">Firmware, Rom, Os</a></p>
@@ -125,11 +112,11 @@
 					</li>
 					<li>
 						<div class="forum-cat">
-							<p class="green-bg"><a href="#">Devices &amp; Wearables</a></p>
+							<p class="teal-bg"><a href="#">Firmware, Rom, Os</a></p>
 						</div>
 						<div class="forum-meta-info">
-							<span class="forum-date">Today</span>
-							<h4 class="forum-title"><a href="#">What phone do you have? Do you have another in mind?</a></h4>
+							<span class="forum-date">Yesterday</span>
+							<h4 class="forum-title"><a href="#">Always get an error when I try to download a ROM!</a></h4>
 							<div class="forum-comments">
 								<a href="#">7 Comments
 								<span class="forum-last-reply"><span>Andrei</span> Replied</span></a>
@@ -138,11 +125,11 @@
 					</li>
 					<li>
 						<div class="forum-cat">
-							<p class="yellow-bg"><a href="#">Help &amp; How to</a></p>
+							<p class="teal-bg"><a href="#">Firmware, Rom, Os</a></p>
 						</div>
 						<div class="forum-meta-info">
-							<span class="forum-date">Today</span>
-							<h4 class="forum-title"><a href="#">What phone do you have? Do you have another in mind?</a></h4>
+							<span class="forum-date">2 DAYS AGO</span>
+							<h4 class="forum-title"><a href="#">Need a list for better battery saving social apps for my 4,000 mAH battery</a></h4>
 							<div class="forum-comments">
 								<a href="#">7 Comments
 								<span class="forum-last-reply"><span>Andrei</span> Replied</span></a>
@@ -151,11 +138,24 @@
 					</li>
 					<li>
 						<div class="forum-cat">
-							<p class="red-bg"><a href="#">Android Apps</a></p>
+							<p class="teal-bg"><a href="#">Firmware, Rom, Os</a></p>
 						</div>
 						<div class="forum-meta-info">
-							<span class="forum-date">Today</span>
-							<h4 class="forum-title"><a href="#">What phone do you have? Do you have another in mind?</a></h4>
+							<span class="forum-date">4 DAYS AGO</span>
+							<h4 class="forum-title"><a href="#">Speeding up out of date Galaxy?</a></h4>
+							<div class="forum-comments">
+								<a href="#">7 Comments
+								<span class="forum-last-reply"><span>Andrei</span> Replied</span></a>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="forum-cat">
+							<p class="teal-bg"><a href="#">Firmware, Rom, Os</a></p>
+						</div>
+						<div class="forum-meta-info">
+							<span class="forum-date">9 DAYS AGO</span>
+							<h4 class="forum-title"><a href="#">Deciding to run Android on iPhone? Is it safe?</a></h4>
 							<div class="forum-comments">
 								<a href="#">7 Comments
 								<span class="forum-last-reply"><span>Andrei</span> Replied</span></a>
