--- a/forum.html
+++ b/forum.html
@@ -30,7 +30,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -86,7 +86,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name blue-bg"><a href="#">Firmware, ROM, OS</a></p>
+								<p class="forum-cat-name teal-bg"><a href="#">Firmware, ROM, OS</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -97,7 +97,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name teal-bg"><a href="#">Devices &amp; Variables</a></p>
+								<p class="forum-cat-name yellow-bg"><a href="#">Devices &amp; Variables</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -108,7 +108,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name yellow-bg"><a href="#">Android Apps</a></p>
+								<p class="forum-cat-name red-bg"><a href="#">Android Apps</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name green-bg"><a href="#">News &amp; Discussion</a></p>
+								<p class="forum-cat-name blue-bg"><a href="#">News &amp; Discussion</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -130,7 +130,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name red-bg"><a href="#">Help &amp; How to</a></p>
+								<p class="forum-cat-name green-bg"><a href="#">Help &amp; How to</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name blue-bg"><a href="#">Firmware, ROM, OS</a></p>
+								<p class="forum-cat-name purple-bg"><a href="#">General Tech</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -152,7 +152,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name teal-bg"><a href="#">Devices &amp; Variables</a></p>
+								<p class="forum-cat-name yellow-bg"><a href="#">Devices &amp; Variables</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -163,7 +163,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name yellow-bg"><a href="#">Android Apps</a></p>
+								<p class="forum-cat-name red-bg"><a href="#">Android Apps</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -174,7 +174,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name green-bg"><a href="#">News &amp; Discussion</a></p>
+								<p class="forum-cat-name blue-bg"><a href="#">News &amp; Discussion</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
@@ -185,7 +185,7 @@
 							<h3 class="forum-item-title">Galaxy SGH I337 Boot loop</h3>
 							<p class="forum-timestamp"><strong><span class="updato-back"></span>DSamsungC</strong> started 7 hours ago</p>
 							<div class="forum-meta">
-								<p class="forum-cat-name red-bg"><a href="#">Help &amp; How to</a></p>
+								<p class="forum-cat-name green-bg"><a href="#">Help &amp; How to</a></p>
 								<p class="item-forum-comments"><a href="#"><span class="updato-discussion"></span> 1</a></p>
 							</div>
 						</div>
