--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -70,21 +70,6 @@
 					<div class="custom-select-container">
 						<select data-downarrow="updato-arrow-down" class="custom-select">
 							<option selected disabled>Select make</option>
-							<option>Option 1</option>
-							<option>Option 2</option>
-							<option>Option 3</option>
-							<option>Option 4</option>
-							<option>Option 5</option>
-							<option>Option 6</option>
-							<option>Option 4</option>
-							<option>Option 5</option>
-							<option>Option 6</option>
-							<option>Option 4</option>
-							<option>Option 5</option>
-							<option>Option 6</option>
-							<option>Option 4</option>
-							<option>Option 5</option>
-							<option>Option 6</option>
 						</select>
 					</div>
 				</div>
@@ -99,7 +84,7 @@
 					</div>
 					<div class="f-post-info">
 						<h3 class="f-main-title">Latest / <span>posts</span></h3>
-						<h3>Annoyed by notifications? Here’s how to disable Chromecast notifications on Android</h3>
+						<h3 class="title-post"><a href="#">Annoyed by notifications? Here’s how to disable Chromecast notifications on Android</a></h3>
 						<p>Whether it is a brand new software update or just a feature like the Google Assistant, Android users are always excited...</p>
 					</div>
 				</div>
@@ -204,7 +189,7 @@
 		</div>
 		<div class="latest-forum">
 			<div class="wrapper">
-				<h3 class="section-title2">Latest / <span>forum</span></h3>
+				<h3 class="section-title2 latest-heading">Latest / <span>forum</span></h3>
 				<a href="#" class="join-discussion-btn">Join the Discussion</a>
 				<div class="clear"></div>
 				<ul class="forum-item-list">
