--- a/sim-unlock.html
+++ b/sim-unlock.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -73,11 +73,11 @@
 				</li>
 				<li class="step2">
 					<span class="number">2</span>
-					<p>Provide Details</p>
+					<p class="light-gray">Provide Details</p>
 				</li>
 				<li>
 					<span class="number">3</span>
-					<p>Confirm &amp; Pay</p>
+					<p class="light-gray">Confirm &amp; Pay</p>
 				</li>
 			</ul>
 			<h2 class="main-unlock-title">Unlock your mobile phone <span>for any network</span> provider</h2>
