--- a/write-for-us.html
+++ b/write-for-us.html
@@ -28,7 +28,7 @@
 				</li>
 				<li><a href="#">Forum</a></li>
 				<li><a href="#">Unlock</a></li>
-				<li><a href="#"><span class="updato-more-icon"></span></a>
+				<li><a href="#"><span class="menu-bar1"></span><span class="menu-bar2"></span><span class="menu-bar3"></span></a>
 					<ul class="sub-nav">
 						<li><a href="#">Footer Menu Link 1</a></li>
 						<li><a href="#">Footer Menu Link 2</a></li>
@@ -45,7 +45,7 @@
 				<a href="#" class="close-search"><span class="updato-cross"></span></a>
 			</div>
 		</div>
-		<div class="banner-home">
+		<div class="banner-home banner-writeus">
 			<div class="wrapper">
 				<div class="featured-post">
 					<div class="f-post-img">
@@ -68,18 +68,18 @@
 						<p>It doesn’t matter whether you’re an established author or a first-timer. The most important thing is that you care passionately and understand deeply the subjects of Samsung, Android and the mobile industry.</p>
 						<p>Second most important factor is that you possess good writing skills and able to communicate your point across efficiently. Please note, in order to maintain our standard in quality, every article will undergo a review process by our editorial staff before acceptance.</p>
 						<p><strong>In addition:</strong></p>
-						<ol>
-							<li><strong>All articles submitted must be original and unpublished. Once your article has been published, it will belong to Updato and you cannot (without our written permission) republish it anywhere else.</strong></li>
-							<li><strong>All articles submitted must be in English language.</strong></li>
-							<li><strong>It’s important to us that you give credit to whom credit is due (source of information, photos, etc).</strong></li>
+						<ol class="write-us-ol">
+							<li>All articles submitted must be original and unpublished. Once your article has been published, it will belong to Updato and you cannot (without our written permission) republish it anywhere else.</li>
+							<li>All articles submitted must be in English language.</li>
+							<li>It’s important to us that you give credit to whom credit is due (source of information, photos, etc).</li>
 						</ol>
 						<h2>Benefits of writing for Updato</h2>
 						<p>Updato is growing at an exceptional rate and here’s what we can offer you:</p>
-						<ul>
-							<li><strong>Your name and brief biographical info at the bottom of your article along with a link to your official website and social accounts</strong></li>
-							<li><strong>Exposure to over 4 million (and growing) readers</strong></li>
-							<li><strong>Recognition and authoritative voice</strong></li>
-							<li><strong>An intrinsic part in the growth of mobile community</strong></li>
+						<ul class="write-us-ul">
+							<li>Your name and brief biographical info at the bottom of your article along with a link to your official website and social accounts</li>
+							<li>Exposure to over 4 million (and growing) readers</li>
+							<li>Recognition and authoritative voice</li>
+							<li>An intrinsic part in the growth of mobile community</li>
 						</ul>
 						<p>For experienced writers monetary rewards may be offered. The amount will of course depend on the quality, volume and other factors of the article.</p>
 						<h2>Our topics</h2>
@@ -94,9 +94,9 @@
 						</ul>
 						<h2>How to submit your article(s)</h2>
 						<p><a href="#">Contact us</a> with your name, email, expertise description and your topics of interest. Be sure to also include:</p>
-						<ol>
-							<li><strong>Examples to some of your work (URLs will do)</strong></li>
-							<li><strong>If you have a specific topic in mind, propose an article title and a brief summary</strong></li>
+						<ol class="write-us-ol">
+							<li>Examples to some of your work (URLs will do)</li>
+							<li>If you have a specific topic in mind, propose an article title and a brief summary</li>
 						</ol>
 						<p>We are always interested in long term relationships with our guest writers. We’ll provide you with more details, so you will know what we’re about.</p>
 						<p>So… Ready to take a step forward? We are always excited to meet new contacts and explore new opportunities! If you have the desire, knowledge and skill, we have an audience waiting to hear your voice! <a href="#">Let’s get in touch!</a></p>
